improve TabComplete & add missing time completion