@@ -1,5 +1,6 @@
 package me.rockquiet.joinprotection.commands;
 
+import me.rockquiet.joinprotection.configuration.ConfigManager;
 import me.rockquiet.joinprotection.configuration.Permissions;
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
@@ -16,40 +17,50 @@ import java.util.List;
 
 public class TabComplete implements TabCompleter {
 
+    private final ConfigManager configManager;
+
+    public TabComplete(ConfigManager configManager) {
+        this.configManager = configManager;
+    }
+
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
         if (!command.getLabel().equalsIgnoreCase("joinprotection")) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         final List<String> results = new ArrayList<>();
+
+        switch (args.length) {
+            case 1 -> {
+                if (sender.hasPermission(Permissions.PROTECT)) results.add(JoinProtectionCommand.PROTECT);
+                if (sender.hasPermission(Permissions.CANCEL)) results.add(JoinProtectionCommand.CANCEL);
+                if (sender.hasPermission(Permissions.RELOAD)) results.add(JoinProtectionCommand.RELOAD);
+            }
+            case 2 -> {
+                if (args[0].equalsIgnoreCase(JoinProtectionCommand.PROTECT) && sender.hasPermission(Permissions.PROTECT)
+                        || args[0].equalsIgnoreCase(JoinProtectionCommand.CANCEL) && sender.hasPermission(Permissions.CANCEL)
+                ) {
+                    for (Player p : Bukkit.getOnlinePlayers()) {
+                        results.add(p.getName());
+                    }
+                }
+            }
+            case 3 -> {
+                if (args[0].equalsIgnoreCase(JoinProtectionCommand.PROTECT) && sender.hasPermission(Permissions.PROTECT)) {
+                    results.add(String.valueOf(configManager.get().plugin.protectionTime));
+                }
+            }
+            default -> {
+                return Collections.emptyList();
+            }
+        }
+
         final List<String> completions = new ArrayList<>();
-
-        int index = 0;
-        if (args.length == 1) {
-            if (sender.hasPermission(Permissions.PROTECT)) {
-                results.add("protect");
-            }
-            if (sender.hasPermission(Permissions.CANCEL)) {
-                results.add("cancel");
-            }
-            if (sender.hasPermission(Permissions.RELOAD)) {
-                results.add("reload");
-            }
-        }
-        if (args.length == 2 && (args[0].equalsIgnoreCase("protect") && sender.hasPermission(Permissions.PROTECT)
-                || args[0].equalsIgnoreCase("cancel") && sender.hasPermission(Permissions.CANCEL))
-        ) {
-            index = 1;
-            for (Player p : Bukkit.getOnlinePlayers()) {
-                results.add(p.getName());
-            }
-        }
-
+        final int index = args.length > 1 ? args.length - 1 : 0;
         StringUtil.copyPartialMatches(args[index], results, completions);
         Collections.sort(completions);
-        results.clear();
-        results.addAll(completions);
-        return results;
+
+        return completions;
     }
 }
